--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "0.1.7",
   "description": "",
   "keywords": [],
-  "files": [
-    "lib",
-    "dist"
-  ],
+  "files": ["lib"],
   "sideEffects": false,
   "main": "lib/es2018/index.js",
   "types": "lib/es2018/index.d.ts",
@@ -15,10 +12,8 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --quiet src",
-    "prepublishOnly": "run-s clean build bundle",
-    "clean": "run-p clean:*",
-    "clean:build": "rimraf lib",
-    "clean:bundle": "rimraf dist",
+    "prepublishOnly": "run-s clean build",
+    "clean": "rimraf lib",
     "build": "run-p build:*",
     "build:es2015": "run-s build:es2015:*",
     "build:es2015:compile": "tsc --project tsconfig.build.json --module commonjs --target es2015 --outDir lib/es2015",
@@ -26,7 +21,6 @@
     "build:es2018": "run-s build:es2018:*",
     "build:es2018:compile": "tsc --project tsconfig.build.json --module commonjs --target es2018 --outDir lib/es2018",
     "build:es2018:patch": "tscpaths -p tsconfig.build.json -s ./src -o ./lib/es2018",
-    "bundle": "rollup --config rollup.config.js",
     "release": "standard-version"
   },
   "husky": {
@@ -38,20 +32,12 @@
   "devDependencies": {
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
-    "@rollup/plugin-commonjs": "^22.0.2",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^14.1.0",
-    "@rollup/plugin-replace": "^4.0.0",
-    "@rollup/plugin-typescript": "^8.5.0",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
     "eslint": "^8.27.0",
     "husky": "4",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "rollup": "^2.79.0",
-    "rollup-plugin-analyzer": "^4.0.0",
-    "rollup-plugin-terser": "^7.0.2",
     "standard-version": "^9.5.0",
     "tscpaths": "^0.0.9",
     "tslib": "^2.4.1",
