--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.7",
   "description": "",
   "keywords": [],
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "sideEffects": false,
   "main": "lib/es2018/index.js",
   "types": "lib/es2018/index.d.ts",
@@ -48,8 +50,9 @@
     "@blackglory/go": "^1.1.2",
     "@blackglory/log": "^1.3.3",
     "@blackglory/pass": "^1.1.0",
-    "@blackglory/types": "^1.4.0",
     "extra-lazy": "^1.3.1",
+    "extra-promise": "^4.1.0",
+    "extra-utils": "^3.0.0",
     "iterable-operator": "^2.2.0",
     "justypes": "^3.0.0"
   }
