--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "extra-lazy": "^1.3.1",
     "extra-promise": "^4.4.0",
     "extra-utils": "^4.0.0",
-    "iterable-operator": "^2.5.0",
+    "iterable-operator": "^2.5.0 || ^3.0.0",
     "justypes": "^4.0.0"
   }
 }
