--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
     "@blackglory/log": "^1.3.3",
     "@blackglory/pass": "^1.1.0",
     "extra-lazy": "^1.3.1",
-    "extra-promise": "^4.4.0 || ^5.0.1",
+    "extra-promise": "^4.4.0",
     "extra-utils": "^4.0.0",
-    "iterable-operator": "^2.5.0 || ^3.0.0",
+    "iterable-operator": "^2.5.0",
     "justypes": "^4.1.0"
   }
 }
