--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "standard-version": "^9.5.0",
     "tscpaths": "^0.0.9",
     "tslib": "^2.4.1",
-    "typescript": "^4.8.4"
+    "typescript": "4.8"
   },
   "dependencies": {
     "@blackglory/errors": "^2.4.3",
