--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "engines": {
-    "node": ">=16"
+    "node": ">=18.17.0"
   },
   "repository": "git@github.com:BlackGlory/prelude.git",
   "author": "BlackGlory <woshenmedoubuzhidao@blackglory.me>",
   "license": "MIT",
   "scripts": {
     "prepare": "ts-patch install -s",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx --quiet src",
+    "lint": "eslint --quiet src",
     "prepublishOnly": "run-s prepare clean build",
     "clean": "rimraf lib",
     "build": "tsc --project tsconfig.build.json --outDir lib",
@@ -32,30 +32,29 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.1",
-    "@commitlint/config-conventional": "^17.6.1",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
-    "eslint": "^8.38.0",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "eslint": "^9.13.0",
     "husky": "4",
     "npm-run-all": "^4.1.5",
     "rimraf": "^4.4.1",
     "standard-version": "^9.5.0",
-    "ts-patch": "^2.1.0",
+    "ts-patch": "^3.2.1",
     "tscpaths": "^0.0.9",
-    "tslib": "^2.5.0",
+    "tslib": "^2.8.0",
     "typescript": "^4.8.4",
-    "typescript-transform-paths": "^3.4.6"
+    "typescript-eslint": "^8.11.0",
+    "typescript-transform-paths": "^3.5.1"
   },
   "dependencies": {
-    "@blackglory/errors": "^3.0.2",
-    "@blackglory/go": "^1.1.2",
-    "@blackglory/log": "^2.0.1",
-    "@blackglory/pass": "^1.1.0",
-    "extra-lazy": "^2.0.1",
-    "extra-promise": "^6.0.6",
-    "extra-utils": "^5.2.0",
-    "iterable-operator": "^4.0.6",
-    "justypes": "^4.2.0"
+    "@blackglory/errors": "^3.0.3",
+    "@blackglory/go": "^2.0.0",
+    "@blackglory/log": "^2.0.2",
+    "@blackglory/pass": "^1.1.1",
+    "extra-lazy": "^2.0.2",
+    "extra-promise": "^7.0.0",
+    "extra-utils": "^5.16.0",
+    "iterable-operator": "^5.1.0",
+    "justypes": "^4.3.0"
   }
 }
